# hans-cute-driver

./: CHANGELOG  CHANGELOG.md  LICENSE.md  README.md  TODO.md  docker-compose.yml
docker/: Dockerfile  Dockerfile.u16  Dockerfile.u18  Dockerfile.u20
dynamixel_controllers/: CMakeLists.txt  setup.py
dynamixel_controllers/nodes/: controller_manager.py
dynamixel_driver/: CMakeLists.txt  package.xml  setup.py
dynamixel_driver/scripts/: change_id.py  test.py
hans_cute_bringup/: CMakeLists.txt  package.xml
hans_cute_bringup/config/: cute_controllers.yaml  cute_servo_manager.yaml  cute_vel_controllers.yaml  hans_cute_joint_pos_controller.yaml
hans_cute_bringup/launch/: hans_cute_bringup.launch
hans_cute_controllers/: CMakeLists.txt  package.xml
hans_cute_driver/: CMakeLists.txt  package.xml
hans_cute_driver/custom_serial_port/: CMakeLists.txt
hans_cute_driver/custom_serial_port/include/custom_serial_port/: custom_serial_port.h  dummy_serial_port.h  serial_port_interface.h
hans_cute_driver/custom_serial_port/src/: custom_serial_port.cpp  dummy_serial_port.cpp
hans_cute_ros_proxy/: CMakeLists.txt  package.xml
hans_cute_status_manager/: CMakeLists.txt  package.xml
scripts/matlab/: HansCute.m  (+1 more)
serial_command_robot/: CMakeLists.txt  package.xml
serial_command_robot/serial_port/: CMakeLists.txt
serial_command_robot/serial_port/include/serial_port/: custom_serial_port.h  dummy_serial_port.h  serial_port_interface.h
serial_command_robot/serial_port/src/: custom_serial_port.cpp  dummy_serial_port.cpp
serial_port_manager/: CMakeLists.txt  package.xml
(+80 files in other folders)
